[gd_scene load_steps=13 format=2]

[ext_resource path="res://Backgrounds/backgroundColorForest.png" type="Texture" id=1]
[ext_resource path="res://StaticBodies/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://StaticBodies/Ceiling.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/BubbleSpriteSheet2.png" type="Texture" id=5]
[ext_resource path="res://Level/Level.gd" type="Script" id=6]
[ext_resource path="res://Bubbles/BubbleSpawner.gd" type="Script" id=7]
[ext_resource path="res://Bubbles/NextBubble.gd" type="Script" id=8]
[ext_resource path="res://UI/Score.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/MenuPopup.tscn" type="PackedScene" id=10]
[ext_resource path="res://Level/TileMap.gd" type="Script" id=11]
[ext_resource path="res://Bubbles/Blank_bubbles.tres" type="TileSet" id=12]

[node name="Level" type="Node2D"]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="Score" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 256 )
current = true

[node name="Floor" type="Polygon2D" parent="."]
color = Color( 0.513726, 0.501961, 0.501961, 1 )
polygon = PoolVector2Array( 18, 460, 640, 460, 640, 600, 18, 600 )

[node name="FinishLine" type="Line2D" parent="."]
points = PoolVector2Array( 7, 350, 640, 350 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="Wall" parent="." instance=ExtResource( 2 )]
position = Vector2( 5, -11 )

[node name="Wall2" parent="." instance=ExtResource( 2 )]
position = Vector2( 625, -11 )

[node name="Ceiling" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, -11 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 320, 450 )

[node name="TileMap" type="TileMap" parent="." groups=["Bubbles"]]
tile_set = ExtResource( 12 )
cell_size = Vector2( 32, 27 )
cell_half_offset = 0
collision_layer = 4
format = 1
script = ExtResource( 11 )

[node name="BubbleSpawner" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="NextBubble" type="Node2D" parent="." groups=["Bubbles"]]
script = ExtResource( 8 )

[node name="ReadyBubble" type="Sprite" parent="NextBubble"]
position = Vector2( 319, 512 )
texture = ExtResource( 5 )
hframes = 10

[node name="BubbleOnDeck" type="Sprite" parent="NextBubble"]
position = Vector2( 256, 512 )
texture = ExtResource( 5 )
hframes = 10

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CeilingTween" type="Tween" parent="."]

[node name="BubbleTween" type="Tween" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="MenuPopup" parent="UILayer" instance=ExtResource( 10 )]

[connection signal="can_fire" from="." to="Player" method="set_fire"]
[connection signal="prepare_bubble" from="." to="NextBubble" method="_on_Level_prepare_bubble"]
[connection signal="spawn_bubble" from="." to="BubbleSpawner" method="_on_Level_spawn_bubble"]
[connection signal="fire_bubble" from="Player" to="." method="_on_Player_fire_bubble"]
[connection signal="next_bubble" from="NextBubble" to="BubbleSpawner" method="_on_NextBubble_next_bubble"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="BubbleTween" to="." method="_on_BubbleTween_tween_all_completed"]
